Update Gemini version. Refactor Gemini api client dtos